--- a/_templates/page.html
+++ b/_templates/page.html
@@ -1,5 +1,5 @@
 {% block footer %}
 <footer>
-  <div class="debug-footer">This is a custom footer</div>
+  <div class="debug-footer">TestTest</div>
 </footer>
 {% endblock %}
